Noteworthy changes in version 1.8 (unreleased)  [C2/A2/R_]
----------------------------------------------


Noteworthy changes in version 1.7 (2024-02-23)  [C2/A2/R0]
----------------------------------------------

 * The npth-config command is not installed by default, because it is
   now replaced by use of pkg-config/gpgrt-config with npth.pc.
   Supply --enable-install-npth-config configure option, if needed.

 * Support for legacy systems w/o pthread_rwlock_t support.  [T4306]

 * New functions npth_poll and npth_ppoll for Unix.  [T5748]

 * Fixes to improve support for 64 bit Windows.

 * Fix declaration conflict using newer mingw versions.  [T5889]

 * Fix build problems on Solaris 11.  [T4491]

 * Fix detecting of the pthread library.  [rPTH6629a4b801]

 * Clean up handling of unsafe semaphores on AIX.  [T6947]

 * Link without -flat_namespace to support macOS 11.  [T5610]

 Release-info: https://dev.gnupg.org/T7010


Noteworthy changes in version 1.6 (2018-07-16)  [C1/A1/R2]
----------------------------------------------

 * Fix library requirements for HPUX.  [#3980]

 * Fix a minor memory leak on Windows.


Noteworthy changes in version 1.5 (2017-06-02)  [C1/A1/R1]
----------------------------------------------

 * Fix the busy waiting emulation of pthread_mutex_timedlock for
   Unices lacking that function; e.g. macOS Sierra.


Noteworthy changes in version 1.4 (2017-05-16)  [C1/A1/R0]
----------------------------------------------

 * On macOS make use of an unnamed semaphore.

 * Build fixes for FreeBSD, NetBSD, and DragonFlyBSD.

 * New function npth_is_protected to help debugging.

 * Change license from LGPLv3+/GPLv2+ to LGPLv2+.


Noteworthy changes in version 1.3 (2016-11-22)
----------------------------------------------

 * Bypass npth_protect/npth_unprotect iff the library has not yet been
   initialized.

 * Fix problems on macOS and AIX

 * Improve detection of clock_gettime


Noteworthy changes in version 1.2 (2015-04-11)