@@ -23,7 +23,7 @@ individually.
 
 * Copyright
 
-  nPth is Copyright (C) 2011, 2012, 2014, 2015, 2017 g10 Code GmbH
+  nPth is Copyright (C) 2011, 2012, 2014, 2015, 2017, 2024 g10 Code GmbH
 
   nPth is free software; you can redistribute it and/or modify
   it under the terms of the GNU Lesser General Public License as
